tests/check/gst/gstmeta.c
@@ -139,11 +139,12 @@ gst_meta_test_get_info (void)
 {
   static const GstMetaInfo *meta_test_info = NULL;
 
-  if (meta_test_info == NULL) {
-    meta_test_info = gst_meta_register (GST_META_TEST_API_TYPE,
+  if (g_once_init_enter (&meta_test_info)) {
+    const GstMetaInfo *mi = gst_meta_register (GST_META_TEST_API_TYPE,
         "GstMetaTest",
         sizeof (GstMetaTest),
         test_init_func, test_free_func, test_transform_func);
+    g_once_init_leave (&meta_test_info, mi);
   }
   return meta_test_info;
 }
